Fix task tooltip in canvas is clipped inside the task + Fix palette menuitem tooltip is hidden if overflow the dropdown

--- a/app/styles/studio.css
+++ b/app/styles/studio.css
@@ -198,7 +198,6 @@ icons div {
 }
 
 .task {
-    overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
     background-color: white;
